--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   align-items: center;
 }
 
-.base-links__link, .add-base-link button {
+.base-links__link, .base-links__add {
   padding: 5px;
   background-color: white;
   border: 1px solid rgba(100,100,100,.1);
@@ -57,8 +57,38 @@
 }
 
 .add-base-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.add-base-link__close {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.add-base-link__group {
+  margin-top: 10px;
+}
+
+.add-base-link__field-group {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
+}
+
+.add-base-link__field--error {
+  border-color: red;
 }
 
 /* List */
