--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,16 @@
 .App {
   width: 300px;
   height: 400px;
-  padding: 20px 10px;
   font-size: 14px;
   display: flex;
   flex-direction: column;
+  border: 1px solid white;
 }
 
 .nav-bar {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 10px;
   padding: 0 10px;
   height: 40px;
   color: white;
@@ -30,8 +29,13 @@
 /* Base Links */
 .base-links {
   display: flex;
-  margin-bottom: 10px;
+  padding: 10px;
   align-items: center;
+  border-bottom: 1px solid rgba(0,0,0,.1);
+}
+
+.base-links__add {
+  width: 24px;
 }
 
 .base-links__link, .base-links__add {
@@ -96,6 +100,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  padding: 10px;
 }
 
 .list__item {
@@ -122,6 +127,10 @@
   justify-content: center;
 }
 
+.list__actions {
+  padding: 10px;
+}
+
 /* Links */
 .deep-link {
   padding: 5px 0;
@@ -134,7 +143,7 @@
 }
 
 /* Add item */
-.add-group, .add-list {
+.add-item {
   margin-top: 5px;
   display: flex;
   flex-direction: column;
